Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

    [CHANGED]

    - Removed ununsed autodie and Moose::AutoBox

0.062     2014-02-02 21:13:10-05:00 America/New_York

    [FIXED]

    - Fixed breakage from Config::MVP 2.200007

0.061     2014-01-15 19:39:55-05:00 America/New_York

    [CHANGED]

    - Actually, we need Pod::Elemental::PerlMunger 2.000001

0.060     2014-01-15 09:35:50-05:00 America/New_York

    [CHANGED]

    - Pod weaving no longer modifies code line numbers; Pod mixed with
      code is commented rather than replaced, but Pod after code is
      removed and replaced with generated Pod

0.059     2013-11-09 21:57:32 America/New_York

    [ADDED]

    - Adds PromptIfStale to check build tool versions before release

    [CHANGED]

    - Requires Pod::Elemental::Transformer::List 0.102000
      (bullet lists that wrap with leading whitespace)

    [REMOVED]

    - Removes unused Pod::Weaver::Plugin::Encoding (since we use
      the built-in SingleEncoding plugin)

0.058     2013-11-04 21:05:24 America/New_York

    [ADDED]

    - Added Prereqs::AuthorDeps

    [CHANGED]

    - Swap in RunExtraTests instead of CheckExtraTests

0.057     2013-10-20 14:15:20 America/New_York

    [INCOMPATIBLE CHANGES]

    - Requires v5 of Dist::Zilla and v4 of Pod::Weaver (currently
      only available as -TRIAL distributions)

    - Uses new SingleEncoding weaver plugin

    - Switches to ReadmeFromPod; currently needs 0.19_01 for dzil v5
      compatibility

0.056     2013-10-15 19:27:21 America/New_York

    [ADDED]

    - Added an "=requires" collector for a REQUIREMENTS sections (handy for
      roles or things with unusual external requirements)

    [CHANGED]

    - Made Pod weaving put USAGE before attribute/method/etc. collectors

    [REMOVED]

    - Removed '=usage' Pod::Weaver collector

    [DOCS]

    - Fixed typos and improved examples

0.055     2013-10-13 15:44:51 America/New_York

    [CHANGED]
